# check-my-homework

./: README.md  check.py  llm.py  pyproject.toml
